--- a/css/style.css
+++ b/css/style.css
@@ -42,7 +42,7 @@ h1 {
   text-shadow: 1px 1px 4px var(--dark);
 }
 h2 {
-  font-size: 2.3rem;
+  font-size: 2rem;
   font-weight: 500;
   font-family: "Inconsolata", monospace;
   text-shadow: 1px 1px 4px var(--dark);
@@ -62,7 +62,7 @@ h6 {
 body {
   width: 100%;
   min-height: 100vh;
-  padding-bottom: 3rem;
+  /* padding-bottom: .75em; */
   background: rgb(32, 201, 151);
   background: radial-gradient(
     circle,
@@ -73,10 +73,11 @@ body {
 }
 
 .container {
+  width: 90%;
   display: flex;
-  margin: 2rem 4rem;
+  margin: 2rem 1.5rem;
   justify-content: space-between;
-  align-items: center;
+  align-items: flex-end;
 }
 
 label {
@@ -85,8 +86,7 @@ label {
 }
 select {
   margin-top: 0.5em;
-  width: 75px;
-  height: 40px;
+  height: 50px;
   border-radius: 0.3em;
   cursor: pointer;
   font-size: 1.5rem;
@@ -103,60 +103,50 @@ select {
 }
 
 .random-btn {
-  width: 150px;
+  width: 25%;
   height: 50px;
   border-radius: 0.3em;
   cursor: pointer;
-  font-size: 2.2rem;
+  font-size: 1.7rem;
   font-weight: 300;
   text-shadow: 1px 1px 4px var(--teal);
   color: white;
   font-family: "Inconsolata", monospace;
-  letter-spacing: 3px;
+  letter-spacing: 1.5px;
   background: var(--dark);
   border: 1px solid var(--teal);
   box-shadow: 0px 0px 0px rgba(0, 0, 0, 0.4);
   transition: 500ms;
 }
 
-.random-btn:after {
-  content: "";
-  position: absolute;
-  transform: translateX(-55px) translateY(-40px);
-  width: 25px;
-  height: 25px;
-  border-radius: 50%;
-  background: transparent;
-  box-shadow: 0px 0px 50px transparent;
-  transition: 500ms;
-}
-
-.random-btn:hover {
-  transform: translateY(-5px);
-  box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.4);
-}
-
-.random-btn:hover:after {
-  background: white;
-  box-shadow: 0px 0px 20px var(--teal), 0px 0px 30px var(--teal),
-    inset 0px 0px 10px var(--teal);
-  animation: spin 1s infinite linear;
-}
-.random-btn:focus {
-  outline: none;
+.clear-btn {
+  width: 25%;
+  height: 50px;
+  border-radius: 0.3em;
+  cursor: pointer;
+  font-size: 1.75rem;
+  font-weight: 300;
+  text-shadow: 1px 1px 4px var(--teal);
+  color: white;
+  font-family: "Inconsolata", monospace;
+  background: var(--dark);
+  border: 1px solid var(--teal);
+  box-shadow: 0px 0px 0px rgba(0, 0, 0, 0.4);
 }
 
 .textareas {
-  margin: 1.5rem 4rem;
+  margin: 0 auto;
   display: flex;
-  justify-content: space-between;
+  flex-direction: column;
+  align-items: center;
   padding-bottom: 1.5em;
+  width: 90%;
   border-bottom: 1px solid rgb(68, 68, 68);
 }
 
 textarea {
   border-radius: 0.3em;
-  margin-top: 0.5em;
+  margin: 0.75em 0;
   resize: none;
   overflow: auto;
   height: 7.5em !important;
@@ -171,12 +161,12 @@ textarea {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  margin: 1.5em 3em;
+  margin: 1.5em 1.5em;
   min-height: 30%;
 }
 
 .box {
-  width: 40%;
+  width: 45%;
   /* display: flex; */
   text-align: left;
   font-size: 1.5em;
@@ -191,6 +181,7 @@ textarea {
 }
 p {
   color: var(--teal);
+  font-size: .8em;
 }
 
 .btn-div {
@@ -200,6 +191,10 @@ p {
   margin-top: 2em;
   padding-bottom: 10em;
   position: relative;
+}
+
+.leader {
+  color: white;
 }
 
 .copy-btn {
@@ -235,6 +230,7 @@ footer {
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
+  text-align: center;
   padding: 0.5em;
   font-size: 1.5em;
   font-family: "Barlow", sans-serif;
@@ -278,6 +274,11 @@ footer p {
   animation: fade-in 1.2s cubic-bezier(0.39, 0.575, 0.565, 1) both;
 }
 
+.fade-out {
+  transition: opacity 0.3s;
+  opacity: 0;
+}
+
 @keyframes spin {
   25% {
     transform: translateX(-25px) translateY(-35px);
@@ -313,9 +314,267 @@ footer p {
   }
 }
 
-@media (min-width: 576px) {
-}
 @media (min-width: 768px) {
+  h1 {
+    margin-top: 0.3em;
+    font-size: 2.7rem;
+    font-weight: 300;
+    font-family: "Inconsolata", monospace;
+    text-shadow: 1px 1px 4px var(--dark);
+  }
+  h2 {
+    font-size: 2.3rem;
+    font-weight: 500;
+    font-family: "Inconsolata", monospace;
+    text-shadow: 1px 1px 4px var(--dark);
+  }
+  h3 {
+    font-size: 1.5rem;
+  }
+  h4 {
+    font-size: 1.1rem;
+  }
+  h5 {
+    font-size: 0.9rem;
+  }
+  h6 {
+    font-size: 0.7rem;
+  }
+  body {
+    /* width: 100%; */
+    min-height: 100vh;
+    padding-bottom: 3rem;
+    background: rgb(32, 201, 151);
+    background: radial-gradient(
+      circle,
+      rgba(32, 201, 151, 1) 0%,
+      rgba(32, 201, 151, 1) 0%,
+      rgba(208, 208, 208, 0.5021358885351015) 100%
+    );
+  }
+
+  .container {
+    display: flex;
+    margin: 2rem 4rem;
+    justify-content: space-between;
+    align-items: flex-end;
+  }
+
+  .label-select {
+    width: 150px;
+  }
+
+  label {
+    display: flex;
+    flex-direction: column;
+  }
+  select {
+    margin-top: 0.5em;
+    width: 75px;
+    height: 40px;
+    border-radius: 0.3em;
+    cursor: pointer;
+    font-size: 1.5rem;
+    font-weight: 300;
+    text-align: center;
+    text-shadow: 1px 1px 4px var(--teal);
+    color: white;
+    font-family: "Inconsolata", monospace;
+    letter-spacing: 3px;
+    background: var(--dark);
+    border: 1px solid var(--teal);
+    box-shadow: 0px 0px 0px rgba(0, 0, 0, 0.4);
+    transition: 500ms;
+  }
+
+  .random-btn {
+    width: 150px;
+    height: 50px;
+    border-radius: 0.3em;
+    cursor: pointer;
+    font-size: 2.2rem;
+    font-weight: 300;
+    text-shadow: 1px 1px 4px var(--teal);
+    color: white;
+    font-family: "Inconsolata", monospace;
+    letter-spacing: 3px;
+    background: var(--dark);
+    border: 1px solid var(--teal);
+    box-shadow: 0px 0px 0px rgba(0, 0, 0, 0.4);
+    transition: 500ms;
+  }
+
+  .random-btn:after {
+    content: "";
+    position: absolute;
+    transform: translateX(-55px) translateY(-40px);
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    background: transparent;
+    box-shadow: 0px 0px 50px transparent;
+    transition: 500ms;
+  }
+
+  .random-btn:hover {
+    transform: translateY(-5px);
+    box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.4);
+  }
+
+  .random-btn:hover:after {
+    background: white;
+    box-shadow: 0px 0px 20px var(--teal), 0px 0px 30px var(--teal),
+      inset 0px 0px 10px var(--teal);
+    animation: spin 1s infinite linear;
+  }
+  .random-btn:focus {
+    outline: none;
+  }
+  .clear-btn {
+    width: 150px;
+    height: 50px;
+    border-radius: 0.3em;
+    cursor: pointer;
+    font-size: 1.75rem;
+    font-weight: 500;
+    text-shadow: 1px 1px 4px var(--teal);
+    color: white;
+    font-family: "Inconsolata", monospace;
+    background: var(--dark);
+    border: 1px solid var(--teal);
+    box-shadow: 0px 0px 0px rgba(0, 0, 0, 0.4);
+  }
+
+  .textareas {
+    margin: 1.5rem 4rem;
+    display: flex;
+    justify-content: space-between;
+    padding-bottom: 1.5em;
+    border-bottom: 1px solid rgb(68, 68, 68);
+  }
+
+  textarea {
+    border-radius: 0.3em;
+    margin-top: 0.5em;
+    resize: none;
+    overflow: auto;
+    height: 7.5em !important;
+    width: 20em;
+    padding: 0.5em 1em;
+    font-family: "Inconsolata", monospace;
+    font-size: 1.2em;
+    box-shadow: 2px 1px 10px 0 #282828;
+  }
+
+  #teamsContainer {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin: 1.5em 3em;
+    min-height: 30%;
+  }
+
+  .box {
+    width: 40%;
+    /* display: flex; */
+    text-align: left;
+    font-size: 1.5em;
+    line-height: 1.5em;
+    font-family: "Barlow", sans-serif;
+    background-color: #333;
+    padding: 20px;
+    margin-bottom: 1em;
+    border-radius: 10px;
+    color: #fff;
+    position: relative;
+  }
+  p {
+    color: var(--teal);
+  }
+
+  .btn-div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 2em;
+    padding-bottom: 10em;
+    position: relative;
+  }
+
+  .leader {
+    color: white;
+  }
+
+  .copy-btn {
+    position: absolute;
+    z-index: 0;
+    margin: auto;
+    width: 150px;
+    height: 50px;
+    border-radius: 0.3em;
+    cursor: pointer;
+    font-size: 1.75rem;
+    font-weight: 500;
+    text-shadow: 1px 1px 4px var(--teal);
+    color: white;
+    font-family: "Inconsolata", monospace;
+    background: var(--dark);
+    border: 1px solid var(--teal);
+    box-shadow: 0px 0px 0px rgba(0, 0, 0, 0.4);
+  }
+
+  footer {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    background-color: #333;
+    color: #fff;
+    padding-top: 1em;
+    z-index: 1;
+  }
+
+  .footer-content {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0.5em;
+    font-size: 1.5em;
+    font-family: "Barlow", sans-serif;
+  }
+
+  footer nav a {
+    color: #fff;
+    text-decoration: none;
+    margin-right: 0.5em;
+    padding-bottom: 1px;
+    position: relative; /* agregado */
+  }
+
+  footer nav a i {
+    margin-right: 0.5em;
+  }
+
+  /* agregado */
+  footer nav a::before {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 0;
+    height: 2px;
+    background-color: #fff;
+    transition: width 0.3s ease;
+  }
+
+  footer nav a:hover::before {
+    width: 100%;
+  }
+
+  footer p {
+    margin-right: 1em;
+    margin-top: 0.5em;
+  }
 }
 @media (min-width: 992px) {
 }
